--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -64,10 +64,7 @@
     "`xavier_uniform(fan_in, fan_out, gain=1.0, **kwargs)`\n",
     "\n",
     "Fills the input Tensor with values according to the method described in [Understanding the difficulty of training deep feedforward neural networks](https://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf), using a uniform distribution. The resulting Tensor will have values sampled from $\\mathcal{U}(-a, a)$ where \n",
-    "\\begin{equation}\n",
-    "a = \\text{gain} \\times \\sqrt{\\frac{6}{\\text{fan_in} + \\text{fan_out}}}\n",
-    "\\end{equation}\n",
-    "\n",
+    "$$a = gain \\times \\sqrt{\\frac{6}{fan_{in} + fan_{out}}}$$\n",
     "Pass remaining `**kwargs` parameters to the corresponding `init` random call.\n",
     "\n",
     "##### Parameters\n",
@@ -79,10 +76,8 @@
     "### Xavier normal\n",
     "`xavier_normal(fan_in, fan_out, gain=1.0, **kwargs)`\n",
     "\n",
-    "Fills the input Tensor with values according to the method described in [Understanding the difficulty of training deep feedforward neural networks](https://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf), using a normal distribution. The resulting Tensor will have values sampled from $\\mathcal{N}(0, \\text{std}^2)$ where \n",
-    "\\begin{equation}\n",
-    "\\text{std} = \\text{gain} \\times \\sqrt{\\frac{2}{\\text{fan_in} + \\text{fan_out}}}\n",
-    "\\end{equation}\n",
+    "Fills the input Tensor with values according to the method described in [Understanding the difficulty of training deep feedforward neural networks](https://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf), using a normal distribution. The resulting Tensor will have values sampled from $\\mathcal{N}(0, std^2)$ where \n",
+    "$$std = gain \\times \\sqrt{\\frac{2}{fan_{in} + fan_{out}}}$$\n",
     "\n",
     "##### Parameters\n",
     "- `fan_in` - dimensionality of input\n",
@@ -93,12 +88,10 @@
     "### Kaiming uniform\n",
     "`kaiming_uniform(fan_in, fan_out, nonlinearity=\"relu\", **kwargs)`\n",
     "\n",
-    "Fills the input Tensor with values according to the method described in [Delving deep into rectifiers: Surpassing human-level performance on ImageNet classification](https://arxiv.org/pdf/1502.01852.pdf), using a uniform distribution. The resulting Tensor will have values sampled from $\\mathcal{U}(-\\text{bound}, \\text{bound})$ where \n",
-    "\\begin{equation}\n",
-    "\\text{bound} = \\text{gain} \\times \\sqrt{\\frac{3}{\\text{fan_in}}}\n",
-    "\\end{equation}\n",
+    "Fills the input Tensor with values according to the method described in [Delving deep into rectifiers: Surpassing human-level performance on ImageNet classification](https://arxiv.org/pdf/1502.01852.pdf), using a uniform distribution. The resulting Tensor will have values sampled from $\\mathcal{U}(-bound, bound)$ where \n",
+    "$$bound = gain \\times \\sqrt{\\frac{3}{fan_{in}}}$$\n",
     "\n",
-    "Use the recommended gain value for ReLU: $\\text{gain}=\\sqrt{2}$.\n",
+    "Use the recommended gain value for ReLU: $gain=\\sqrt{2}$.\n",
     "\n",
     "##### Parameters\n",
     "- `fan_in` - dimensionality of input\n",
@@ -109,10 +102,8 @@
     "### Kaiming normal\n",
     "`kaiming_normal(fan_in, fan_out, nonlinearity=\"relu\", **kwargs)`\n",
     "\n",
-    "Fills the input Tensor with values according to the method described in [Delving deep into rectifiers: Surpassing human-level performance on ImageNet classification](https://arxiv.org/pdf/1502.01852.pdf), using a uniform distribution. The resulting Tensor will have values sampled from $\\mathcal{N}(0, \\text{std}^2)$ where \n",
-    "\\begin{equation}\n",
-    "\\text{std} = \\frac{\\text{gain}}{\\sqrt{\\text{fan_in}}}\n",
-    "\\end{equation}\n",
+    "Fills the input Tensor with values according to the method described in [Delving deep into rectifiers: Surpassing human-level performance on ImageNet classification](https://arxiv.org/pdf/1502.01852.pdf), using a uniform distribution. The resulting Tensor will have values sampled from $\\mathcal{N}(0, std^2)$ where \n",
+    "$$std = \\frac{gain}{\\sqrt{fan_{in}}}$$\n",
     "\n",
     "Use the recommended gain value for ReLU: $\\text{gain}=\\sqrt{2}$.\n",
     "\n",
@@ -903,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
