--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -143,7 +143,7 @@
     "### Linear\n",
     "`needle.nn.Linear(in_features, out_features, bias=True, device=None, dtype=\"float32\")`\n",
     "\n",
-    "Applies a linear transformation to the incoming data: $y = xA^T + b$. The input shape is $(N, H_{in})$ where $H_{in}=\\text{in_features}$. The output shape is $(N, H_{out})$ where $H_{out}=\\text{out_features}$.\n",
+    "Applies a linear transformation to the incoming data: $y = xA^T + b$. The input shape is $(N, H_{in})$ where $H_{in}=in_{features}$. The output shape is $(N, H_{out})$ where $H_{out}=out_{features}$.\n",
     "\n",
     "Be careful to explicitly broadcast the bias term to the correct shape -- Needle does not support implicit broadcasting.\n",
     "\n",
